Closing case 2024-00022 but keeping the possibility open to request data for now

--- a/_cases/2024/DIVD-2024-00022.md
+++ b/_cases/2024/DIVD-2024-00022.md
@@ -19,7 +19,7 @@ versions:
 recommendation: We recomment CSIRTs, CERTs, and security teams to contact us, to get a list of domains found. After verfication they can get get more detailed data for the domains applicable to their constituancy.
 #patch_status: Full patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2024-06-04
 end: 
 timeline:
@@ -38,6 +38,9 @@ timeline:
 - start: 2024-06-20
   end:
   event: "CSIRTs, CERTs and security teams can request data"
+- start: 2025-01-15
+  end:
+  event: "We are closing this case because the request volume has decreased. We understand the importance for CSIRTs, CERTs and security teams to request their data when they stumble upon this case file. It is still possible to request data, until further notice, by following the procedure in our case file."
 ips: n/a
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
