Adding case end date for administration

--- a/_cases/2024/DIVD-2024-00022.md
+++ b/_cases/2024/DIVD-2024-00022.md
@@ -21,7 +21,7 @@ recommendation: We recomment CSIRTs, CERTs, and security teams to contact us, to
 #workaround: n/a
 status : Closed
 start: 2024-06-04
-end: 
+end: 2025-01-15
 timeline:
 - start: 2024-06-02
   end:
