Closing case 00038, didn't find a good way to fingerprint the systems without added a printer to the system which will pingback to our system

--- a/_cases/2024/DIVD-2024-00038.md
+++ b/_cases/2024/DIVD-2024-00038.md
@@ -23,8 +23,9 @@ versions:
 recommendation: "Update to a non-vulnerable version"
 workaround: "Disable and remove the cups-browsed service if not needed. Block traffic to UDP port 631 and DNS-SD traffic if not necessary."
 patch_status: Patch available
-status : Open
+status : Closed
 start: 2024-10-17
+end: 2025-01-23
 timeline:
 - start: 2024-10-17
   end:
@@ -35,8 +36,10 @@ timeline:
 - start: 2024-10-17
   end:
   event: "Case opened and starting first scan."
-
-
+- start: 2025-01-23
+  end:
+  event: "We have not been able to find a way to fingerprint that aligns with our Code of Conduct. The available methods modify or alter data on the system."
+ips: n/a
 ---
 
 ## Summary
