--- a/_cases/2024/DIVD-2024-00050.md
+++ b/_cases/2024/DIVD-2024-00050.md
@@ -17,8 +17,9 @@ versions:
 recommendation: "Upgrade to MiCollab 9.8 SP2 (9.8.2.12) or later"
 workaround: "none"
 patch_status: Patch available
-status : Open
+status : Closed
 start: 2024-12-05
+end: 2025-02-03
 timeline:
 - start: 2024-12-05
   end:
@@ -32,6 +33,13 @@ timeline:
 - start: 2024-12-06
   end:
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
+- start: 2025-02-03
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2025-02-03
+  end:
+  event: "Case closed."
+ips: 1459
 ---
 
 ## Summary
