--- a/_cases/2024/DIVD-2024-00052.md
+++ b/_cases/2024/DIVD-2024-00052.md
@@ -18,8 +18,9 @@ versions:
 recommendation: "Upgrade to version 5.8.0.24 or later"
 workaround: "none"
 patch_status: Patch available
-status : Open
+status : Closed
 start: 2024-12-10
+end: 2025-02-05
 timeline:
 - start: 2024-12-10
   end:
@@ -33,6 +34,13 @@ timeline:
 - start: 2024-12-27
   end:
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
+- start: 2025-02-05
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2025-02-05
+  end:
+  event: "Case closed."
+ips: 20
 ---
 
 ## Summary
