--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -6,18 +6,21 @@ author: Victor Gevers
 lead: Tabitha Vogelaar
 researchers:
 - Alwin Warringa
+- Amirali Amirkhani
 - Anje Knottnerus
 - Barre Dijkstra
 - Bartlomiej Lizak
 - Emirhan Baser
 - Inanc Yigit
+- Jeroen van der Broek
 - Joost Grunwald
 - Joris Cras
 - Kees van Poeijer
 - Lennaert Oudshoorn
 - Luc Groot Landeweer
+- Martin van der Kroon
 - Max van der Horst
-- Raymond Zwarts
+- Nico-Dirk van Loo
 - Serena de Pater
 - Victor Pasman
 - Winko Erades van den Berg
@@ -40,11 +43,17 @@ timeline:
   end:
   event: "Roughly 56.000 candidate NGOs found for scanning, continuing discovery."
 - start: 2024-11-04
-  end: 
-  event: "Vulnerability scanning has started on a first set of organisations."
-- start: 2024-11-20
+  end: 2024-11-20
+  event: "Vulnerability scanning a set of 67 NGO's for the collab project, ending with notifications being send out"
+- start: 2025-01-06
+  end: 2025-01-29
+  event: "Vulnerability scanning a set of 20 NGO's for the global project, ending with notifications being send out"
+  - start: 2025-02-02
   end:
-  event: "Proceeding with first round of vulnerability notifications."
+  event: "Vulnerability scanning a set of ~200 NGO's for the collab project, ending with notifications being send out"
+- start: 2025-02-02
+  end:
+  event: "Vulnerability scanning a set of 30 NGO's for the global project, ending with notifications being send out"
 ---
 
 ## Summary
