Third round for 00048

--- a/_cases/2024/DIVD-2024-00048.md
+++ b/_cases/2024/DIVD-2024-00048.md
@@ -37,6 +37,9 @@ timeline:
 - start: 2025-01-15
   end:
   event: "DIVD conducts a second scan and notification round."
+- start: 2025-02-19
+  end:
+  event: "DIVD conducts a third scan and notification round."
 #ips:
 ---
 
