Fixed lack of excerpt

--- a/_cases/2025/DIVD-2025-00004.md
+++ b/_cases/2025/DIVD-2025-00004.md
@@ -2,8 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: Authentication Bypass in PAN-OS Management Web Interface
-excerpt: "Please set this to and except of a few lines.
-Excerpts are shown on /cases"
+excerpt: "Due to confusion between the ngnix and apache web servers/proxies used to serve the PAN-OS web managmenet interface, it is possible to access certain PHP scripts on Palo Alto devices running PAN-OS without authentication as described in CVE-2025-0108. Running these scripts can lead to a compromise of the confidentiality and integrity of the device."
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
