--- a/_cases/2025/DIVD-2025-00004.md
+++ b/_cases/2025/DIVD-2025-00004.md
@@ -56,7 +56,7 @@ Due to confusion between the ngnix and apache web servers/proxies used to serve 
 
 ## What you can do
 
-It is high recommended not to publicly expose management interfaces of edge devices to the internet. THis is also the case for PAN-OS device as per their [best paractices deployment guidelines](https://live.paloaltonetworks.com/t5/community-blogs/tips-amp-tricks-how-to-secure-the-management-access-of-your-palo/ba-p/464431).
+It is highly recommended not to publicly expose management interfaces of edge devices to the internet. This is also the case for PAN-OS device as per their [best practices deployment guidelines](https://live.paloaltonetworks.com/t5/community-blogs/tips-amp-tricks-how-to-secure-the-management-access-of-your-palo/ba-p/464431).
 
 * If you have the managmenet interface of you PAN-OS device exposed to internet, please restrict access to trusted IP addresses only.
 * Install vendor supplied patches
