--- a/_cases/2025/DIVD-2025-00004.md
+++ b/_cases/2025/DIVD-2025-00004.md
@@ -27,7 +27,7 @@ end:
 timeline:
 - start: 2025-02-12
   end:
-  event: "Palo Alto published adviosry PAN-273971 and released patches"
+  event: "Palo Alto published advisory PAN-273971 and released patches"
 - start: 2025-02-12
   end:
   event: "Assetnote releases full vulnerability details"
