--- a/_cases/2025/DIVD-2025-00004.md
+++ b/_cases/2025/DIVD-2025-00004.md
@@ -58,12 +58,12 @@ Due to confusion between the ngnix and apache web servers/proxies used to serve 
 
 It is highly recommended not to publicly expose management interfaces of edge devices to the internet. This is also the case for PAN-OS device as per their [best practices deployment guidelines](https://live.paloaltonetworks.com/t5/community-blogs/tips-amp-tricks-how-to-secure-the-management-access-of-your-palo/ba-p/464431).
 
-* If you have the managmenet interface of you PAN-OS device exposed to internet, please restrict access to trusted IP addresses only.
+* If you have the management interface of your PAN-OS device exposed to the internet, please restrict access to trusted IP addresses only.
 * Install vendor supplied patches
 
 ## What we are doing
 
-DIVD is currently scanning the internet for vulnerable devices. Once devices are identitied we will warn the administrators of the networks they are located in.
+DIVD is currently scanning the internet for vulnerable devices. Once devices are identified we will warn the administrators of the networks they are located in.
 
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
