--- a/_cases/2025/DIVD-2025-00004.md
+++ b/_cases/2025/DIVD-2025-00004.md
@@ -43,6 +43,9 @@ timeline:
 - start: 2025-02-20
   end:
   event: "Case opened"
+- start: 2025-02-20
+  end:
+  event: "First scan"
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
