--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -1,6 +1,6 @@
 ---
 layout: case  
-title: "2024-00004 Global NGOs"
+title: "Global NGOs"
 excerpt: "This initiative focuses on identifying and addressing vulnerabilities in the publicly accessible assets of NGOs."
 author: Victor Gevers
 lead: Tabitha Vogelaar
