--- a/_cases/2024/DIVD-2024-00031.md
+++ b/_cases/2024/DIVD-2024-00031.md
@@ -15,7 +15,7 @@ versions:
 recommendation: "Check for the patched versions and get those installed"
 workaround: "N/A"
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-08-05
 end:
 timeline:
@@ -31,7 +31,13 @@ timeline:
 - start: 2024-08-05
   end:
   event: "First version of this casefile."
-# ips: 0
+- start: 2024-09-14
+  end:
+  event: "DIVD notified system owners with a vulnerable application"
+- start: 2025-02-24
+  end:
+  event: "DIVD closes the case."
+ips: 44
 # The lines below redirect all the CVE references to our site
 # Uncommend these lines if we are the CNA of record. (ask @cna_admins on Slack if you don't know)
 jekyll-secinfo:
