--- a/_cases/2024/DIVD-2024-00031.md
+++ b/_cases/2024/DIVD-2024-00031.md
@@ -17,7 +17,7 @@ workaround: "N/A"
 patch_status: Released
 status : Closed
 start: 2024-08-05
-end:
+end: 2025-02-26
 timeline:
 - start: 2024-07-02
   end:
@@ -34,7 +34,7 @@ timeline:
 - start: 2024-09-14
   end:
   event: "DIVD notified system owners with a vulnerable application"
-- start: 2025-02-24
+- start: 2025-02-26
   end:
   event: "DIVD closes the case."
 ips: 16
