--- a/_cases/2024/DIVD-2024-00043.md
+++ b/_cases/2024/DIVD-2024-00043.md
@@ -3,7 +3,7 @@ layout: case
 title: "CyberAudit-Web - SSRF and Authentication bypass CVEs Registered"
 author: Max van der Horst
 lead: Max van der Horst
-excerpt: "Multiple vulnerabilities have been found in ServiceNow. Combining these vulnerabilities could enable an unauthenticated user to remotely execute code within the context of the Now Platform"
+excerpt: "Two vulnerabilities have been found in CyberAudit-Web. One of the vulnerabilities, an authentication bypass, could lead to compromise of the lock system and provide physical access to CyberLock-protected premises."
 researchers:
 - Hidde Smit
 - Wietse Boonstra
@@ -17,7 +17,7 @@ product:
 - videx-legacy-ssl library
 versions:
 - videx-legacy-ssl library before 1.1.3 (CVE-2025-22366)
-- CyberAudit-Web before version 9.8.11 (CVE-2025-22367)
+- CyberAudit-Web before version 9.5 (CVE-2025-22367)
 recommendation: "Install the patched version of CyberAudit-Web"
 workaround: "No workaround available"
 patch_status: Released
@@ -47,7 +47,7 @@ timeline:
 ## Summary
 CyberAudit-Web is a software suite for the CyberLock system, an electronic lock. Researchers of DIVD have found two vulnerabilities in the CyberAudit-Web suite, potentially allowing malicious actors to compromise CyberAudit-Web installations and the locks associated with it.
 
-The two vulnerabilities include a Server-Side Request Forgery vulnerability in older versions of the videx-legacy-ssl library and an Authentication Bypass in CyberAudit-Web versions before 9.8.11, which are End-of-Life. Acknowledging the severity, CyberLock has made a patch available for both customers with and without support contract.
+The two vulnerabilities include a Server-Side Request Forgery vulnerability in older versions of the videx-legacy-ssl library and an Authentication Bypass in CyberAudit-Web versions before 9.5, which are End-of-Maintenance. Acknowledging the severity, CyberLock has made a patch available for both customers with and without support contract.
 
 ## Recommendations
 Install the CyberLock-provided security patch on your system as soon as possible.
