Small typo fix as pointed out by Gedriaan Mulder

--- a/_cases/2024/DIVD-2024-00031.md
+++ b/_cases/2024/DIVD-2024-00031.md
@@ -3,7 +3,7 @@ layout: case
 title: "Unauthenticated Local File Inclusion vulnerability in ComfortKey"
 author: Victor Pasman
 lead: Alwin Warringa
-excerpt: "An Unautheticated Local File Inclusion vulnerability has been found in ComfortKey, a product of Celsius Benelux. Using this vulnerability, an unauthenticated attacker may retrieve sensitive information about the underlying system."
+excerpt: "An Unauthenticated Local File Inclusion vulnerability has been found in ComfortKey, a product of Celsius Benelux. Using this vulnerability, an unauthenticated attacker may retrieve sensitive information about the underlying system."
 researchers:
 - Alwin Warringa
 cves:
