Last round and closing 2024-00048

--- a/_cases/2024/DIVD-2024-00048.md
+++ b/_cases/2024/DIVD-2024-00048.md
@@ -18,9 +18,9 @@ versions:
 recommendation: "Install the update as soon as possible"
 workaround: "None"
 patch_status: Available
-status : Open
+status : Closed
 start: 2024-11-22
-#end: 
+end: 2025-03-10 
 timeline:
 - start: 2024-11-22
   end:
@@ -40,7 +40,13 @@ timeline:
 - start: 2025-02-19
   end:
   event: "DIVD conducts a third scan and notification round."
-#ips:
+- start: 2025-03-10
+  end:
+  event: "DIVD conducts a fourth scan and notification round."
+- start: 2025-03-10
+  end:
+  event: "Case closed."
+ips: 283
 ---
 
 ## Summary
