--- a/_cases/2025/DIVD-2025-00004.md
+++ b/_cases/2025/DIVD-2025-00004.md
@@ -7,6 +7,7 @@ author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
 - Frank Breedijk
+- Alwin Warringa
 - Stijn Engelhard (intern)
 # You can use free text here as well. E.g. to indicate that some vulnerabilities don't have CVEs assigned (yet).
 cves:
@@ -46,6 +47,12 @@ timeline:
 - start: 2025-02-20
   end:
   event: "First scan"
+- start: 2025-03-06
+  end:
+  event: "Second scan"
+- start: 2025-03-10
+  end:
+  event: "DIVD begins notifying owners of vulnerable systems."
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
