--- a/_cases/2025/DIVD-2025-00003.md
+++ b/_cases/2025/DIVD-2025-00003.md
@@ -2,8 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: Multiple vulnerabilities in Mennekes Smart / Ultimate Charging stations
-excerpt: "Please set this to and except of a few lines.
-Excerpts are shown on /cases"
+excerpt: "Five vulnerabilities have been found in Mennekes Smart / Ultimate charging stations"
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
@@ -70,6 +69,14 @@ jekyll-secinfo:
 External research Wilco van Beijnum and DIVD researcher Harm van der Brik have identified multiple vulnerabilities in the Firmware of the Mennekes Premium Column charging station. These vulnerabilities allow an authenticated attacker to execute arbitrary OS commands, read arbitrary files or execute SQL commands against the database of the charging station.
 This firmware is common to all Mennekes Smart / Premium chargers.
 
+These vulnerabilities are:
+* {% cve 2025-22366 %} - An Authenticated Remote Command Execution in the firmware update interface, CVE4.0: 8.7
+* {% cve 2025-22367 %} - An Authenticated Remote Command Execution in the set time interface, CVE4.0: 8.7
+* {% cve 2025-22368 %} - An Authenticated Remote Command Execution in the SCU firmware update interface, CVE4.0: 8.7
+* {% cve 2025-22369 %} - An arbitrary file read vulnerability, CVE4.0: 7.1
+* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the confiruration screens , CVE4.0: 5.3
+
+
 ## What you can do
 
 If you are the owner of or are responsible for the maintenance of such a charging station we recommend that you update the firmware to the latest version. You can download the firmware for the [Mennekes Software Updates page](https://www.mennekes.nl/emobility/service/software-updates/)
@@ -85,8 +92,8 @@ We have responsibibly disclosed the vulnerabilities to Mennekes. We are investig
 ## More information
 * [Mennekes Software Updates page](https://www.mennekes.nl/emobility/service/software-updates/)
 * [Mennekes Release Notes](https://www.mennekes.nl/fileadmin/MEN-Deutschland/emobility/04_software/06_smart_premium/Release_Notes_for_2.15_06.03.2025.pdf)
-* {% cve CVE-2025-22366 %}
-* {% cve CVE-2025-22367 %}
-* {% cve CVE-2025-22368 %}
-* {% cve CVE-2025-22369 %}
-* {% cve CVE-2025-22370 %}
+* {% cve 2025-22366 %} - An Authenticated Remote Command Execution in the firmware update interface, CVE4.0: 8.7
+* {% cve 2025-22367 %} - An Authenticated Remote Command Execution in the set time interface, CVE4.0: 8.7
+* {% cve 2025-22368 %} - An Authenticated Remote Command Execution in the SCU firmware update interface, CVE4.0: 8.7
+* {% cve 2025-22369 %} - An arbitrary file read vulnerability, CVE4.0: 7.1
+* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the confiruration screens , CVE4.0: 5.3
