--- a/_cases/2025/DIVD-2025-00003.md
+++ b/_cases/2025/DIVD-2025-00003.md
@@ -70,11 +70,11 @@ External research Wilco van Beijnum and DIVD researcher Harm van der Brik have i
 This firmware is common to all Mennekes Smart / Premium chargers.
 
 These vulnerabilities are:
-* {% cve 2025-22366 %} - An Authenticated Remote Command Execution in the firmware update interface, CVE4.0: 8.7
-* {% cve 2025-22367 %} - An Authenticated Remote Command Execution in the set time interface, CVE4.0: 8.7
-* {% cve 2025-22368 %} - An Authenticated Remote Command Execution in the SCU firmware update interface, CVE4.0: 8.7
-* {% cve 2025-22369 %} - An arbitrary file read vulnerability, CVE4.0: 7.1
-* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the confiruration screens , CVE4.0: 5.3
+* {% cve 2025-22366 %} - An Authenticated Remote Command Execution in the firmware update interface, CVSS4.0: 8.7
+* {% cve 2025-22367 %} - An Authenticated Remote Command Execution in the set time interface, CVSS4.0: 8.7
+* {% cve 2025-22368 %} - An Authenticated Remote Command Execution in the SCU firmware update interface, CVSS4.0: 8.7
+* {% cve 2025-22369 %} - An arbitrary file read vulnerability, CVSS4.0: 7.1
+* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the confiruration screens , CVSS4.0: 5.3
 
 
 ## What you can do
@@ -92,8 +92,8 @@ We have responsibibly disclosed the vulnerabilities to Mennekes. We are investig
 ## More information
 * [Mennekes Software Updates page](https://www.mennekes.nl/emobility/service/software-updates/)
 * [Mennekes Release Notes](https://www.mennekes.nl/fileadmin/MEN-Deutschland/emobility/04_software/06_smart_premium/Release_Notes_for_2.15_06.03.2025.pdf)
-* {% cve 2025-22366 %} - An Authenticated Remote Command Execution in the firmware update interface, CVE4.0: 8.7
-* {% cve 2025-22367 %} - An Authenticated Remote Command Execution in the set time interface, CVE4.0: 8.7
-* {% cve 2025-22368 %} - An Authenticated Remote Command Execution in the SCU firmware update interface, CVE4.0: 8.7
-* {% cve 2025-22369 %} - An arbitrary file read vulnerability, CVE4.0: 7.1
-* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the confiruration screens , CVE4.0: 5.3
+* {% cve 2025-22366 %} - An Authenticated Remote Command Execution in the firmware update interface, CVSS4.0: 8.7
+* {% cve 2025-22367 %} - An Authenticated Remote Command Execution in the set time interface, CVSS4.0: 8.7
+* {% cve 2025-22368 %} - An Authenticated Remote Command Execution in the SCU firmware update interface, CVSS4.0: 8.7
+* {% cve 2025-22369 %} - An arbitrary file read vulnerability, CVSS4.0: 7.1
+* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the confiruration screens , CVSS4.0: 5.3
