--- a/_cases/2025/DIVD-2025-00003.md
+++ b/_cases/2025/DIVD-2025-00003.md
@@ -17,7 +17,7 @@ cves:
 - CVE-2025-22369
 - CVE-2025-22370
 product: 
-- Mannekes Smart / Premiun Charging stations
+- Mennekes Smart / Premiun Charging stations
 versions: 
 - Firmware version < 2.15
 recommendation: Install the update from the vendor
