--- a/_cases/2025/DIVD-2025-00003.md
+++ b/_cases/2025/DIVD-2025-00003.md
@@ -17,7 +17,7 @@ cves:
 - CVE-2025-22369
 - CVE-2025-22370
 product: 
-- Mennekes Smart / Premiun Charging stations
+- Mennekes Smart / Premium Charging stations
 versions: 
 - Firmware version < 2.15
 recommendation: Install the update from the vendor
@@ -74,12 +74,12 @@ These vulnerabilities are:
 * {% cve 2025-22367 %} - An Authenticated Remote Command Execution in the set time interface, CVSS4.0: 8.7
 * {% cve 2025-22368 %} - An Authenticated Remote Command Execution in the SCU firmware update interface, CVSS4.0: 8.7
 * {% cve 2025-22369 %} - An arbitrary file read vulnerability, CVSS4.0: 7.1
-* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the confiruration screens , CVSS4.0: 5.3
+* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the configuration screens , CVSS4.0: 5.3
 
 
 ## What you can do
 
-If you are the owner of or are responsible for the maintenance of such a charging station we recommend that you update the firmware to the latest version. You can download the firmware for the [Mennekes Software Updates page](https://www.mennekes.nl/emobility/service/software-updates/)
+If you are the owner of or are responsible for the maintenance of such a charging station we recommend that you update the firmware to the latest version. You can download the firmware from the [Mennekes Software Updates page](https://www.mennekes.nl/emobility/service/software-updates/)
 
 ## What we are doing
 
@@ -96,4 +96,4 @@ We have responsibibly disclosed the vulnerabilities to Mennekes. We are investig
 * {% cve 2025-22367 %} - An Authenticated Remote Command Execution in the set time interface, CVSS4.0: 8.7
 * {% cve 2025-22368 %} - An Authenticated Remote Command Execution in the SCU firmware update interface, CVSS4.0: 8.7
 * {% cve 2025-22369 %} - An arbitrary file read vulnerability, CVSS4.0: 7.1
-* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the confiruration screens , CVSS4.0: 5.3
+* {% cve 2025-22370 %} - Multiple SQL injection vulnerabilities in the configuration screens , CVSS4.0: 5.3
