--- a/_cases/2024/DIVD-2024-00051.md
+++ b/_cases/2024/DIVD-2024-00051.md
@@ -34,6 +34,9 @@ timeline:
 - start: 2025-02-24
   end:
   event: "DIVD starts notifying network owners with a vulnerable application in their network."
+- start: 2025-03-12
+  end:
+  event: "DIVD conducts a follow-up scan and second notification round."
 ---
 
 ## Summary
