--- a/_cases/2025/DIVD-2025-00003.md
+++ b/_cases/2025/DIVD-2025-00003.md
@@ -1,8 +1,8 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: Multiple vulnerabilities in Mennekes Smart / Ultimate Charging stations
-excerpt: "Five vulnerabilities have been found in Mennekes Smart / Ultimate charging stations"
+title: Multiple vulnerabilities in Mennekes Smart / Premium Charging stations
+excerpt: "Five vulnerabilities have been found in Mennekes Smart / Premium charging stations"
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
