And another small typo

--- a/_cases/2025/DIVD-2025-00003.md
+++ b/_cases/2025/DIVD-2025-00003.md
@@ -21,7 +21,7 @@ product:
 versions: 
 - Firmware version < 2.15
 recommendation: Install the update from the vendor
-patch_status: Full patched
+patch_status: Fully patched
 #workaround: n/a
 status : Open
 start: 2024-09-12
