--- a/_cases/2025/DIVD-2025-00001.md
+++ b/_cases/2025/DIVD-2025-00001.md
@@ -2,7 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: Multiple vulnerabilities in Sicomm Basec Service
-excerpt: "The Sicomm Basic online too contains multiple vulnerabilities."
+excerpt: "The Sicomm BASEC online tool contains multiple vulnerabilities."
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
