Consistent spelling of BASEC

--- a/_cases/2025/DIVD-2025-00001.md
+++ b/_cases/2025/DIVD-2025-00001.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: Multiple vulnerabilities in Sicomm Basec Service
+title: Multiple vulnerabilities in Sicomm BASEC Service
 excerpt: "The Sicomm BASEC online tool contains multiple vulnerabilities."
 author: Frank Breedijk
 lead: Frank Breedijk
@@ -60,7 +60,7 @@ timeline:
   event: "6th notification about vulnerabilities. (Via voicemail of support)"
 - start: 2025-03-14
   end:
-  event: "7th notification about vulnerabilities. Full report sent to Basec and CISA"
+  event: "7th notification about vulnerabilities. Full report sent to Sicomm and CISA"
 #- start: 2024-12-05
 #  end:
 #  event: "Vendor acknowledges receipt of the vulnerability"
@@ -87,7 +87,7 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Late 2021, during an investigation into hacked sites used in a spam network, DIVD researcher Jesse Meijer stumbles upon, unrelated, source code of Sicomm Basec, and decides to report this source code being publicly available to Sicomm, to which he never gets a reply. Based on the source code he becomes suspicious that Sicomm Basec contains vulnerabilities and manages to confirm his suspicions in both the source code and the actual online service.
+Late 2021, during an investigation into hacked sites used in a spam network, DIVD researcher Jesse Meijer stumbles upon, unrelated, source code of Sicomm BASEC, and decides to report this source code being publicly available to Sicomm, to which he never gets a reply. Based on the source code he becomes suspicious that Sicomm BASEC contains vulnerabilities and manages to confirm his suspicions in both the source code and the actual online service.
 
 On 12 Feb 2022 he informs Sicomm support of the vulnerabilities, followed up by an email to an executive on 1 Oct 2022, but never hears back. On 1 Jan 2025 he hands over the case to DIVD CSIRT who validates his findings and tries to contact Sicomm too. An email to support on 14 Jan 2025, LinkedIn messages to several executives on 15 Jan 2025, another email to support on 22 Jan and a voice mail message to support on 26 Feb 2025 all go unanswered.
 
