--- a/_cases/2025/DIVD-2025-00006.md
+++ b/_cases/2025/DIVD-2025-00006.md
@@ -2,7 +2,7 @@
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
 title: Next.js Middleware Authorization Bypass
-excerpt: "The vulnerability affects the middleware functionality in Next.js, an attacker can completely circumvent these middleware controls by adding a specially crafted "x-middleware-subrequest" header to their HTTP requests.
+excerpt: "The vulnerability affects the middleware functionality in Next.js, an attacker can completely circumvent these middleware controls by adding a specially crafted 'x-middleware-subrequest' header to their HTTP requests."
 author: Koen Schagen
 lead: Koen Schagen
 researchers:
@@ -19,9 +19,9 @@ versions:
 - 13.x (<13.5.9)
 - 14.x (<14.2.25)
 - 15.x (<15.2.3)
-recommendation: Update to next.js software outside the effected above versions.
-patch_status: Fully patched
-workaround: Block/remove "x-middleware-subrequest" request header by proxy or WAF firewall
+recommendation: "Update to next.js software outside the effected above versions."
+patch_status: "Fully patched"
+workaround: "Block/remove 'x-middleware-subrequest'request header by proxy or WAF firewall"
 status : Open
 start: 2025-03-21
 end: 
