--- a/_cases/2025/DIVD-2025-00006.md
+++ b/_cases/2025/DIVD-2025-00006.md
@@ -65,5 +65,5 @@ DIVD is currently scanning the internet for vulnerable next.js applications with
 
 ## More information
 * {% cve CVE-2025-29927 %}
-* [Next.js advisory](https://security.paloaltonetworks.com/CVE-2025-0108](https://github.com/vercel/next.js/security/advisories/GHSA-f82v-jwr5-mffw)
+* [Next.js advisory](https://github.com/vercel/next.js/security/advisories/GHSA-f82v-jwr5-mffw)
 * [projectdiscovery nuclei-template blog](https://projectdiscovery.io/blog/nextjs-middleware-authorization-bypass)
