Small update in case DIVD-2025-00001

--- a/_cases/2025/DIVD-2025-00001.md
+++ b/_cases/2025/DIVD-2025-00001.md
@@ -75,6 +75,10 @@ timeline:
 - start: 2025-03-14
   end:   
   event: "Publication of casefile"
+- start: 2025-03-21
+  event: "CISA has confirmed to be in contact with Sicomm"
+- start: 2025-04-02
+  event: "Prompted the vendor for a response via the CISA portal"
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
