--- a/_cases/2025/DIVD-2025-00010.md
+++ b/_cases/2025/DIVD-2025-00010.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "stack-based buffer overflow in Ivanti Connect Secure"
+title: "Stack-based buffer overflow in Ivanti Connect Secure"
 author: Stan Plasmeijer
 lead: Stan Plasmeijer
 excerpt: "A critical stack-based buffer overflow in Ivanti Connect Secure allows unauthenticated attackers to achieve remote code execution by abusing the X-Forwarded-For header."
