--- a/_cases/2025/DIVD-2025-00010.md
+++ b/_cases/2025/DIVD-2025-00010.md
@@ -42,7 +42,7 @@ Ivanti has confirmed that limited exploitation has occurred in the wild against 
 ## Recommendations
 Update to Ivanti Connect Secure version 22.7R2.6 or later immediately. This update was released in February 2025 and resolves the vulnerability.
 
-Pulse Connect Secure 9.1x is no longer supported and will not receive a patch. Organizations should immediately decommission or replace these systems to prevent potential exploitation.
+Pulse Connect Secure 9.x is no longer supported and will not receive a patch. Organizations should immediately decommission or replace these systems to prevent potential exploitation.
 
 ## What we are doing
 DIVD is currently working to identify parties that are running a vulnerable version of Ivanti Connect Secure and to notify these parties. 
