Sending out notifications

--- a/_cases/2025/DIVD-2025-00010.md
+++ b/_cases/2025/DIVD-2025-00010.md
@@ -30,6 +30,9 @@ timeline:
 - start: 2025-04-04
   end:
   event: "Case opened and starting first scan."
+- start: 2025-04-04
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable devices in their network."
 ---
 
 ## Summary
