--- a/_cases/2024/DIVD-2024-00043.md
+++ b/_cases/2024/DIVD-2024-00043.md
@@ -3,7 +3,7 @@ layout: case
 title: "CyberAudit-Web - SSRF and Authentication bypass CVEs Registered"
 author: Max van der Horst
 lead: Max van der Horst
-excerpt: "Multiple vulnerabilities have been found in ServiceNow. Combining these vulnerabilities could enable an unauthenticated user to remotely execute code within the context of the Now Platform"
+excerpt: "Two vulnerabilities have been found in Videx's CyberAudit-Web. These vulnerabilities could allow an attacker to take over the underlying system."
 researchers:
 - Hidde Smit
 - Wietse Boonstra
@@ -47,10 +47,10 @@ timeline:
 ## Summary
 CyberAudit-Web is a software suite for the CyberLock system, an electronic lock. Researchers of DIVD have found two vulnerabilities in the CyberAudit-Web suite, potentially allowing malicious actors to compromise CyberAudit-Web installations and the locks associated with it.
 
-The two vulnerabilities include a Server-Side Request Forgery vulnerability in older versions of the videx-legacy-ssl library and an Authentication Bypass in CyberAudit-Web versions before 9.8.11, which are End-of-Life. Acknowledging the severity, CyberLock has made a patch available for both customers with and without support contract.
+The two vulnerabilities include a Server-Side Request Forgery vulnerability in older versions of the videx-legacy-ssl web service and an Authentication Bypass in CyberAudit-Web versions before 9.8.11, which are End-of-Maintance (EOM). Acknowledging the severity, Videx has made a patch available for both customers with and without support contract.
 
 ## Recommendations
-Install the CyberLock-provided security patch on your system as soon as possible.
+Install the Videx-provided security patch on your system as soon as possible.
 
 ## What we are doing
 DIVD is currently working to identify parties that are running a vulnerable version of CyberAudit-Web and to notify these parties. We do this by verifying the presence of the vulnerability in a harmless manner and collect the software version number if possible.
