--- a/_cases/2024/DIVD-2024-00044.md
+++ b/_cases/2024/DIVD-2024-00044.md
@@ -29,8 +29,9 @@ versions:
 recommendation: "Patch your version to a non-vulnerable version. Migrate to a fixed release when you are running FortiManager Cloud 6.4"
 workaround: "Available for some versions. Look at the recommendations on https://www.fortiguard.com/psirt/FG-IR-24-423 for your version."
 patch_status: Available
-status : Open
+status : Closed
 start: 2024-10-24
+end: 2025-04-09
 timeline:
 - start: 2024-10-24
   end:
@@ -47,6 +48,10 @@ timeline:
 - start: 2024-12-21
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
+- start: 2025-04-09
+  end:
+  event: "Case closed."
+ips: 394
 ---
 ## Summary
 A missing authentication for critical function vulnerability [CWE-306] in FortiManager fgfmd daemon may allow a remote unauthenticated attacker to execute arbitrary code or commands via specially crafted requests. Reports have shown this vulnerability is exploited in the wild.
