closing case DIVD-2024-00049

--- a/_cases/2024/DIVD-2024-00049.md
+++ b/_cases/2024/DIVD-2024-00049.md
@@ -35,9 +35,9 @@ versions:
 recommendation: "Phase out the D-Link device or place it behind a VPN or an IP allowlist"
 workaround: "None"
 patch_status: "None"
-status : Open
+status : Closed
 start: 2024-12-02
-#end: 
+end: 2025-04-09
 timeline:
 - start: 2024-12-02
   end:
@@ -51,6 +51,9 @@ timeline:
 - start: 2024-12-02
   end:
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
+- start: 2025-04-09
+  end:
+  event: "Case closed."
 ips: 223
 ---
 
