--- a/_cases/2025/DIVD-2025-00002.md
+++ b/_cases/2025/DIVD-2025-00002.md
@@ -34,6 +34,13 @@ timeline:
 - start: 2025-01-10
   end:
   event: "DIVD starts notifying network owners with a vulnerable devices in their network."
+- start: 2025-04-10
+  end:
+  event: "DIVD sent out a second round of notifications."
+- start: 2024-04-10
+  end:
+  event: "Case closed."
+ips: 3229
 ---
 
 ## Summary
