Updates on BASEC case

--- a/_cases/2025/DIVD-2025-00001.md
+++ b/_cases/2025/DIVD-2025-00001.md
@@ -67,10 +67,6 @@ timeline:
 #  end:
 #  event: "Vendor acknowledges receipt of the vulnerability"
 - start: 2025-03-14
-  end:   open
-  event: "Time to patch"
-  # Time to patch is another important metric
-- start: 2025-03-14
   end:   
   event: "Publication of casefile"
 - start: 2025-03-14
@@ -89,6 +85,18 @@ timeline:
 - start: 2025-03-14
   end:   2025-04-14
   event: "Time for limited disclosure"
+- start: 2025-04-16 
+  event: "CVE-2025-22371 fixed"
+- start: 2025-03-14
+  end:   2025-04-16
+  event: "Time to patch CVE-2025-22371"
+  # Time to patch is another important metric
+- start: 2025-03-14
+  end:   open
+  event: "Time to patch other CVEs"
+  # Time to patch is another important metric
+- start: 2025-04-17
+  event: "Teams meeting between SicommNet and DIVD"
 - start: 2025-06-12
   end:   
   event: "Minimum wait time for full disclosure"
@@ -111,7 +119,9 @@ On 12 Feb 2022 he informs Sicomm support of the vulnerabilities, followed up by 
 
 On 14 Mar 2025 we considered SicommNet informed as per our [CNA policy](https://csirt.divd.nl/cna) and we published this case file online. We have also sent Sicomm a full report of our findings. We have sent a copy of the report to CISA, because Sicomm claims BASEC is primarily used by US entities and we have seen evidence of this.
 
-Since we did not receive any feedback from SicommNet before 14 Apr 2025 we have now issued a [product warning](/2025/04/14/SicommNet-Basec-product-warning/) and published the CVE records to the CVE datbase and on this site (* {% cve CVE-2025-22371 %}, {% cve CVE-2025-22372 %}, and {% cve CVE-2025-22373 %}).
+On 14 Apr 2025 we issued a [product warning](/2025/04/14/SicommNet-Basec-product-warning/) and published the CVE records to the CVE datbase and on this site (* {% cve CVE-2025-22371 %}, {% cve CVE-2025-22372 %}, and {% cve CVE-2025-22373 %}).
+
+On 17 Apr 2025 we had a meeting with SicommNet. {% cve 2025-022371 %} was fixed on 16 APr around 23:00 EST. We expressed our concerns about the system and it's current state and the possibility is was compromised. SicommNet did not make any statements about password rotation or forensics. We received limited information on how Sicomm is adressing this issue forther, but hope to learn more in the future.
 
 ## What you can do
 
