Full disclosure Qliksense user enumeration

--- a/_cases/2021/DIVD-2021-00021.md
+++ b/_cases/2021/DIVD-2021-00021.md
@@ -37,10 +37,14 @@ timeline:
 - start: 2022-04-01
   end:
   event: "Case closed."  
+- start: 2025-04-25
+  event: Full disclosure
 ---
 ## Summary
 
 On 18 August 2021, DIVD discovered a timing attack vulnerability. This vulnerability can be abused for domain user enumeration. As of November 2021, this vulnerability has been solved by the vendor. CVE-2022-0564 has been assigned to this vulnerability. Affected systems are only vulnerable if they have LDAP configured.
+
+On 25 Apr 2025 we disclosed the full details of this vulnerability in the [CVE record](/CVE-2022-0564) published on this site and [in the CVE database](https://www.cve.org/CVERecord?id=CVE-2022-0564).
 
 ## What you can do
 
