--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -25,17 +25,17 @@ product: n/a
 versions: any
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 -workaround: n/a
-status: Open
+status: Closed
 start: 2023-10-04
-end:
+end: 2025-03-31
 timeline:
 - start: 2023-10-04
-  end:
-  event: "Case started"
+  end: 2025-03-31
+  event: "Case"
 ---
 
 ## Summary
-This initiative focuses on identifying and addressing vulnerabilities in the publicly accessible assets of NGOs.
+This initiative focuses on identifying and addressing vulnerabilities in the publicly accessible assets of NGOs. This is a collaboration with CyberPeace Institute, The Hague Humanity Hub (HHH) and CSIRT.global
 
 ## Recommendations
 After receiving a notification, it is very important that the vulnerability outlined in the correspondence is promptly addressed and remediated. The notification will provide detailed information, including the specific location and a comprehensive description of the identified vulnerability.
@@ -49,6 +49,9 @@ These notifications are dispatched in multiple phases. The initial phase address
  
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
- 
+
+## What is next
+After the collaboration part is over, DIVD is going to continue supporting NGO's as best as we can under a new, larger project also named Global NGO's. This page is just kept online for legacy reasons.
+
 ## More information
 * [Free cybersecurity support program for 200 humanitarian NGOs in The Hague](https://thehague.com/partners/en/news/free-cybersecurity-support-program-200-humanitarian-ngos-the-hague).
