--- a/_cases/2025/DIVD-2025-00005.md
+++ b/_cases/2025/DIVD-2025-00005.md
@@ -14,7 +14,7 @@ product:
 versions: 
 - Various
 recommendation: "Operators should implement VPN gateways or dedicated hardware interfaces to connect ATGs with monitoring services. Alternative mitigations include applying source IP address filters or setting passwords on serial ports."
-patch_status: "Varies by vendor"
+patch_status: N/A, this is a configuration problem.
 workaround: "Restrict access using firewalls, implement source IP filtering, or set up a VPN for secure remote access."
 status: Open
 start: 2024-12-15
